[project]
name = "smart-pdf-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "chromadb>=1.5.9",
    "langchain>=1.2.18",
    "langchain-community>=0.4.1",
    "langchain-core>=1.3.3",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.2.1",
    "pdf2image>=1.17.0",
    "pillow>=12.2.0",
    "pymupdf>=1.27.2.3",
    "pypdf>=6.11.0",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.4.1",
    "streamlit>=1.57.0",
]
